applicationsets/git-dir-generator/apps-prod/pricelist-frontend/pricelist-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: pricelist
    tier: frontend
  name: pricelist-route
  namespace: pricelist
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  host: pricelist.apps.argo.gruppo.autostrade.it
  port:
    targetPort: 8080
  to:
    kind: Service
    name: pricelist
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
